2012-06-14  James Robinson  <jamesr@chromium.org>

        [chromium] Use WebImageLayer in GraphicsLayerChromium for image layers
        https://bugs.webkit.org/show_bug.cgi?id=89150

        Reviewed by Adrienne Walker.

        Adds a WebImageLayer type to represent layers backed by (guess what) Images.

        * Platform.gypi:
        * chromium/public/WebImageLayer.h: Added.
        (WebCore):
        (WebKit):
        (WebImageLayer):
        (WebKit::WebImageLayer::WebImageLayer):
        (WebKit::WebImageLayer::~WebImageLayer):

2012-06-14  James Robinson  <jamesr@chromium.org>

        [chromium] GraphicsLayerChromium should use WebContentLayer directly
        https://bugs.webkit.org/show_bug.cgi?id=89145

        Reviewed by Adrienne Walker.

        Add an opaque rect parameter to WebContentLayerClient::paintContents() for a client to (optionally) provide
        information about opaque portions of the painted region for culling optimizations.

        * chromium/public/WebContentLayerClient.h:
        (WebContentLayerClient):

2012-06-16  Robert Kroeger  <rjkroege@chromium.org>

        [chromium] Make the deviceScaleFactor dynamically adjustable.
        https://bugs.webkit.org/show_bug.cgi?id=88916

        Reviewed by James Robinson.

        * chromium/public/WebLayerTreeView.h: Plumb setDeviceScaleFactor and
        deviceScaleFactor functions.
        (WebKit::WebLayerTreeView::Settings::Settings): Remove deviceScaleFactor from
        settings as it is now dynamic.
        (Settings):
        (WebLayerTreeView):

2012-06-14  Ian Vollick  <vollick@chromium.org>

        [chromium] Certain settings in CCSettings could be global
        https://bugs.webkit.org/show_bug.cgi?id=88384

        Reviewed by James Robinson.

        * chromium/public/WebLayerTreeView.h:
        (WebCore):
        (WebKit::WebLayerTreeView::Settings::Settings):
        (Settings):

2012-06-14  Eugene Klyuchnikov  <eustas.bug@gmail.com>
