@@ -1,3 +1,14 @@
+2012-06-19  Tony Payne  <tpayne@chromium.org>
+
+        Add monitor profile support for Win
+        https://bugs.webkit.org/show_bug.cgi?id=88565
+
+        Reviewed by Eric Seidel.
+
+        * chromium/public/Platform.h:
+        (Platform):
+        (WebKit::Platform::screenColorProfile):
+
 2012-06-14  James Robinson  <jamesr@chromium.org>
 
         [chromium] Use WebImageLayer in GraphicsLayerChromium for image layers
